# cyphal-onboard-sounding-rockets

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE.md  README.md
Doc/: Running-Tests.md
Log/: Log.md
Scripts/: export-yakut-variables.sh  (+2 more)
src/Lib/: CMakeLists.txt  IndexLibrary.py
src/Lib/cyphal_public_regulated_data_types_compiled/reg/udral/physics/acoustics/: Note_0_1.h
src/Lib/cyphal_public_regulated_data_types_compiled/reg/udral/physics/electricity/: PowerTs_0_1.h  Power_0_1.h  SourceTs_0_1.h  Source_0_1.h
src/Lib/cyphal_public_regulated_data_types_compiled/reg/udral/physics/optics/: HighColor_0_1.h
src/Lib/cyphal_public_regulated_data_types_compiled/reg/udral/physics/thermodynamics/: PressureTempVarTs_0_1.h
src/Lib/cyphal_public_regulated_data_types_compiled/reg/udral/physics/time/: TAI64VarTs_0_1.h  TAI64Var_0_1.h  TAI64_0_1.h
src/Lib/cyphal_public_regulated_data_types_compiled/reg/udral/service/battery/: Error_0_1.h  Parameters_0_3.h  Status_0_2.h  Technology_0_1.h  _0_1.h
src/Lib/cyphal_public_regulated_data_types_compiled/reg/udral/service/common/: Heartbeat_0_1.h  Readiness_0_1.h
src/Lib/cyphal_public_regulated_data_types_compiled/reg/udral/service/sensor/: Status_0_1.h
src/Lib/cyphal_public_regulated_data_types_compiled/uavcan/_register/: Access_1_0.h  List_1_0.h  Name_1_0.h  Value_1_0.h
src/Lib/cyphal_public_regulated_data_types_compiled/uavcan/diagnostic/: Record_1_0.h  Record_1_1.h  Severity_1_0.h
src/Lib/cyphal_public_regulated_data_types_compiled/uavcan/file/: Error_1_0.h  GetInfo_0_1.h  GetInfo_0_2.h  List_0_1.h  List_0_2.h  Modify_1_0.h  Modify_1_1.h  Path_1_0.h  Path_2_0.h  Read_1_0.h  Read_1_1.h  Write_1_0.h  Write_1_1.h
src/Lib/cyphal_public_regulated_data_types_compiled/uavcan/internet/udp/: HandleIncomingPacket_0_1.h  HandleIncomingPacket_0_2.h  OutgoingPacket_0_1.h  OutgoingPacket_0_2.h
src/Lib/cyphal_public_regulated_data_types_compiled/uavcan/metatransport/can/: ArbitrationID_0_1.h  BaseArbitrationID_0_1.h  DataClassic_0_1.h  DataFD_0_1.h  Error_0_1.h  ExtendedArbitrationID_0_1.h  Frame_0_1.h  Frame_0_2.h  Manifestation_0_1.h  RTR_0_1.h
src/Lib/cyphal_public_regulated_data_types_compiled/uavcan/metatransport/ethernet/: EtherType_0_1.h  Frame_0_1.h
src/Lib/cyphal_public_regulated_data_types_compiled/uavcan/metatransport/serial/: Fragment_0_1.h  Fragment_0_2.h
src/Lib/cyphal_public_regulated_data_types_compiled/uavcan/metatransport/udp/: Endpoint_0_1.h  Frame_0_1.h
src/Lib/cyphal_public_regulated_data_types_compiled/uavcan/node/: ExecuteCommand_1_0.h  ExecuteCommand_1_1.h  GetInfo_1_0.h  GetTransportStatistics_0_1.h  Health_1_0.h  Heartbeat_1_0.h  ID_1_0.h  IOStatistics_0_1.h  Mode_1_0.h  Version_1_0.h
src/Lib/cyphal_public_regulated_data_types_compiled/uavcan/node/port/: ID_1_0.h  List_0_1.h  ServiceIDList_0_1.h  ServiceID_1_0.h  SubjectIDList_0_1.h  SubjectID_1_0.h
src/Lib/cyphal_public_regulated_data_types_compiled/uavcan/pnp/: NodeIDAllocationData_1_0.h  NodeIDAllocationData_2_0.h
src/Lib/cyphal_public_regulated_data_types_compiled/uavcan/pnp/cluster/: AppendEntries_1_0.h  Discovery_1_0.h  Entry_1_0.h  RequestVote_1_0.h
src/Lib/cyphal_public_regulated_data_types_compiled/uavcan/primitive/: Empty_1_0.h  String_1_0.h  Unstructured_1_0.h
src/Lib/cyphal_public_regulated_data_types_compiled/uavcan/primitive/array/: Bit_1_0.h  Integer16_1_0.h  Integer32_1_0.h  Integer64_1_0.h  Integer8_1_0.h  Natural16_1_0.h  Natural32_1_0.h  Natural64_1_0.h  Natural8_1_0.h  Real16_1_0.h  Real32_1_0.h  Real64_1_0.h
src/Lib/cyphal_public_regulated_data_types_compiled/uavcan/primitive/scalar/: Bit_1_0.h  Integer16_1_0.h  Integer32_1_0.h  Integer64_1_0.h  Integer8_1_0.h  Natural16_1_0.h  Natural32_1_0.h  Natural64_1_0.h  Natural8_1_0.h  Real16_1_0.h  Real32_1_0.h  Real64_1_0.h
src/Lib/cyphal_public_regulated_data_types_compiled/uavcan/si/sample/acceleration/: Scalar_1_0.h  Vector3_1_0.h
src/Lib/cyphal_public_regulated_data_types_compiled/uavcan/si/sample/angle/: Quaternion_1_0.h  Scalar_1_0.h
src/Lib/cyphal_public_regulated_data_types_compiled/uavcan/si/sample/angular_acceleration/: Scalar_1_0.h  Vector3_1_0.h
src/Lib/cyphal_public_regulated_data_types_compiled/uavcan/si/sample/angular_velocity/: Scalar_1_0.h  Vector3_1_0.h
src/Lib/cyphal_public_regulated_data_types_compiled/uavcan/si/sample/duration/: Scalar_1_0.h  WideScalar_1_0.h
src/Lib/cyphal_public_regulated_data_types_compiled/uavcan/si/sample/electric_charge/: Scalar_1_0.h
src/Lib/cyphal_public_regulated_data_types_compiled/uavcan/si/sample/electric_current/: Scalar_1_0.h
src/Lib/cyphal_public_regulated_data_types_compiled/uavcan/si/sample/energy/: Scalar_1_0.h
src/Lib/cyphal_public_regulated_data_types_compiled/uavcan/si/sample/force/: Scalar_1_0.h  Vector3_1_0.h
src/Lib/cyphal_public_regulated_data_types_compiled/uavcan/time/: GetSynchronizationMasterInfo_0_1.h  Synchronization_1_0.h  SynchronizedTimestamp_1_0.h  TAIInfo_0_1.h  TimeSystem_0_1.h
src/OpenCyphal/: CMakeLists.txt  Canard.cpp  Canard.h  CanardTransceiver.h  CanardTransferReceiver.h  Clock.cpp  Clock.h  IPMessage.h  Node.cpp  Node.h  OpenCyphal.cpp  OpenCyphal.h  PMessage.h  PMessageByteArray.cpp  PMessageByteArray.h  PMessageHeartbeat.cpp  PMessageHeartbeat.h  PUavcanPrimitiveEmpty.cpp  PUavcanPrimitiveEmpty.h  SByteArray.cpp  SByteArray.h  SMessage.cpp  SMessage.h  SMessageGetInfo.cpp  SMessageGetInfo.h  SRequestPrimitiveEmpty.cpp  SRequestPrimitiveEmpty.h  SResponsePrimitiveEmpty.cpp  SResponsePrimitiveEmpty.h  TByteArray.cpp  TByteArray.h  THeartbeat.cpp  THeartbeat.h  TPrimitiveEmpty.cpp  TPrimitiveEmpty.h  Task.cpp  Task.h
src/TestUtilities/: CMakeLists.txt  LatencyMeasurementNode.cpp  LatencyMeasurementNode.h  NodeFactory.cpp  NodeFactory.h  TLatencyMeasurement.cpp  TLatencyMeasurement.h
src/Tests/: CMakeLists.txt  ReferenceConfigurationTest.cpp  ReferenceConfigurationTest.h  ReferenceValuesTest.cpp  ReferenceValuesTest.h  SocketCanTest.cpp  SocketCanTest.h  T104ChangeOfCommunicationInterfaceTest.cpp  T104ChangeOfCommunicationInterfaceTest.h  Tests.cpp  Tests.h
(+109 files in other folders)
